
Änderungen
----------

v0.8.2 (??.01.2011)
 * New field in competition for league table type
 * Avoid t3lib_SpriteManager for TYPO4 4.3 and older.

v0.8.1 (17.10.2010)
 * New hook in merge profiles
 * #46: Remove profiles from team
 * #47: It is possible to calculate end result from results of match parts.
 * Some new fields for clubs
 * #19: New BE form to manually create matches
 * #19: New team mode to edit matches in BE
 * New video field if extension rgmediaimages is installed
 * Avoid deletion of profiles with references to other records
 * New BE module to manage clubs and stadiums

v0.8.0 (21.10.2010)
 * BE module refactoring

v0.7.7 (26.09.2010)
 * #39: Sort order of clubs can be changed to name

v0.7.6 (16.09.2010)
 * New method getInstance in tx_cfcleague_models_Profile
 * Register new match notes with tx_cfcleague_util_Misc::registerMatchNote()

v0.7.5 (13.09.2010) (not released)
 * Models and services extended for statistics integration
 * Requirement of lib/div removed

v0.7.4 (03.09.2010)
 * Quick input field for liveticker in TYPO3 4.4 works again
 * TeamNotes for coaches and supporters possible
 * Bugfix tx_cfcleague_models_Competition::getGroup()

v0.7.3 (17.07.2010)
 * BE modul CSS styles fixed for TYPO3 4.4
 * Matches: New field sets for set results

v0.7.2 (04.07.2010)
 * Quick input field for liveticker in TYPO3 4.4 deactivated (JS problems)
 * Country fields for stadiums and clubs

v0.7.1 (03.07.2010)
 * Model classes extended
 * Prev/Next-Buttons in Round-Selector
 * search_Teams: Relation to competition is possible
 * Clubs: New fields for geo coordinates

v0.7.0 (17.05.2010)
 * Manage Teams: SQL error fixed

v0.6.5 (11.05.2010) (not released)
 * All dependencies to tx_div removed
 * Clubs: Main sorting field for Selectbox is now city and then name. 
 * Team: Thumbnail for logo in TCA-Form
 * Dependency to DAM is optional now. But there are some features lost without DAM!

v0.6.3 (02.01.2010)
 * #25: Quick input field for liveticker 
